force-app/main/default/objects/Customer__c/fields/Billing_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_1__c</fullName>
    <label>Billing Address Line 1</label>
    <type>TextArea</type>
</CustomField>