force-app/main/default/objects/Customer__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>Please select Birthday from the calendar</description>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>