force-app/main/default/objects/Customer__c/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <displayFormat>CID-{0000}</displayFormat>
    <label>CustomerID</label>
    <type>AutoNumber</type>
</CustomField>